# discord-rpc

./: CMakeLists.txt  LICENSE  README.md
examples/send-presence/: send-presence.c
include/: discord_rpc.h  discord_rpc.hpp  discord_rpc_shared.h
src/: CMakeLists.txt  backoff.h  cmd_channel.cpp  cmd_channel.h  connection.h  connection_unix.cpp  connection_win.cpp  data_channel.cpp  data_channel.h  discord_rpc.cpp  discord_rpc_impl.cpp  discord_rpc_impl.h  event_channel.cpp  event_channel.h  events.h  fixed_string.h  io_thread.cpp  io_thread.h  msg_queue.h  presence.h  rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h
